# ubtc-backend

./: .env  .gitignore  Cargo.toml
src/: adaptor.rs  bitcoin_anchor.rs  collateral.rs  commitment.rs  dleq.rs  errors.rs  lib.rs  main.rs  nullifier.rs  proof.rs  signing.rs  transfer.rs  verify.rs  wallet.rs
