[package]
name = "ubtc-protocol"
version = "0.1.0"
edition = "2021"
description = "UBTC Client-Side Validation Protocol — Quantum-Resistant Bitcoin-Native Monetary Primitive"
authors = ["World Local Bank"]

[dependencies]
# Post-quantum cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

# Hashing and primitives
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Bitcoin interaction
bitcoin = "0.31"
bitcoincore-rpc = "0.18"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "ubtc_protocol"
path = "src/lib.rs"
