[package]
name = "ubtc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
totp-rs = { version = "5", features = ["gen_secret"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
fips204 = "0.4"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
ubtc-protocol = { path = "../../ubtc-protocol" }
bitcoin = { version = "0.31", features = ["rand-std"] }
secp256k1 = { version = "0.28", features = ["rand-std", "global-context"] }
bitcoin_hashes = "0.13"
pqcrypto-kyber = "0.8"
